tests/ui/missing/missing-fields-in-struct-pattern.stderr
error[E0769]: tuple variant `S` written as struct variant
  --> $DIR/missing-fields-in-struct-pattern.rs:4:12
   |
LL |     if let S { a, b, c, d } = S(1, 2, 3, 4) {
   |            ^^^^^^^^^^^^^^^^
   |
help: use the tuple variant pattern syntax instead
   |
LL -     if let S { a, b, c, d } = S(1, 2, 3, 4) {
LL +     if let S(a, b, c, d) = S(1, 2, 3, 4) {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0769`.
